docs/pages/versions/v57.0.0/sdk/ui/universal/bottomsheet.mdx
---
title: BottomSheet
description: A modal sheet that slides up from the bottom of the screen.
sourceCodeUrl: 'https://github.com/expo/expo/tree/sdk-57/packages/expo-ui'
packageName: '@expo/ui'
platforms: ['android', 'ios', 'web', 'expo-go']
---

import APISection from '~/components/plugins/APISection';
import { APIInstallSection } from '~/components/plugins/InstallSection';
import { ComponentExample } from '~/ui/components/ComponentExample';
import { PlatformSpotlight, PlatformTabsGroup } from '~/ui/components/PlatformTabs';

A modal sheet that slides up from the bottom of the screen. The sheet's visibility is controlled — toggle [`isPresented`](#ispresented) from React state and dismiss it from [`onDismiss`](#ondismiss) (called when the user swipes down or taps the overlay).

<PlatformTabsGroup>

<PlatformSpotlight
  android={{
    src: '/static/images/expo-ui/bottomsheet/android-light.webp',
    darkSrc: '/static/images/expo-ui/bottomsheet/android-dark.webp',
    alt: 'Modal bottom sheet with title, description, and action buttons',
  }}
  ios={{
    src: '/static/images/expo-ui/bottomsheet/ios-light.webp',
    darkSrc: '/static/images/expo-ui/bottomsheet/ios-dark.webp',
    alt: 'A BottomSheet at medium detent showing a Sort By list with Most Recent selected',
  }}
/>

## Installation

<APIInstallSection />

## Usage

### Basic bottom sheet

<ComponentExample
  title="BottomSheetExample.tsx"
  android={{
    src: '/static/images/expo-ui/examples/universal-bottomsheet-basic-android-light.webp',
    darkSrc: '/static/images/expo-ui/examples/universal-bottomsheet-basic-android-dark.webp',
    alt: 'An open sheet titled Sheet contents with a Close button, over a dimmed screen',
  }}
  ios={{
    src: '/static/images/expo-ui/examples/universal-bottomsheet-basic-ios-light.webp',
    darkSrc: '/static/images/expo-ui/examples/universal-bottomsheet-basic-ios-dark.webp',
    alt: 'An open sheet titled Sheet contents with a Close button, over a dimmed screen',
  }}>

```tsx
import { useState } from 'react';
import { useColorScheme } from 'react-native';
import { Host, Column, Button, BottomSheet, Text } from '@expo/ui';

export default function BottomSheetExample() {
  const [isPresented, setIsPresented] = useState(false);
  const colorScheme = useColorScheme();
  const ink = { color: colorScheme === 'dark' ? '#FFFFFF' : '#000000' };

  return (
    <>
      <Host matchContents>
        <Button label="Open sheet" onPress={() => setIsPresented(true)} />
      </Host>
      <BottomSheet isPresented={isPresented} onDismiss={() => setIsPresented(false)}>
        <Column spacing={12}>
          <Text textStyle={{ ...ink, fontSize: 18, fontWeight: '700' }}>Sheet contents</Text>
          <Text textStyle={ink}>Drag down or tap the overlay to dismiss.</Text>
          <Button label="Close" onPress={() => setIsPresented(false)} />
        </Column>
      </BottomSheet>
    </>
  );
}
```

</ComponentExample>

### Hiding the drag indicator

Pass [`showDragIndicator={false}`](#showdragindicator) for sheets without a handle.

<ComponentExample
  title="BottomSheetNoIndicatorExample.tsx"
  android={{
    src: '/static/images/expo-ui/examples/universal-bottomsheet-no-indicator-android-light.webp',
    darkSrc: '/static/images/expo-ui/examples/universal-bottomsheet-no-indicator-android-dark.webp',
    alt: 'A short sheet with no drag handle at the bottom of a dimmed screen',
  }}
  ios={{
    src: '/static/images/expo-ui/examples/universal-bottomsheet-no-indicator-ios-light.webp',
    darkSrc: '/static/images/expo-ui/examples/universal-bottomsheet-no-indicator-ios-dark.webp',
    alt: 'A short sheet with no drag handle at the bottom of a dimmed screen',
  }}>

```tsx
import { useState } from 'react';
import { useColorScheme } from 'react-native';
import { Host, Button, BottomSheet, Text } from '@expo/ui';

export default function BottomSheetNoIndicatorExample() {
  const [isPresented, setIsPresented] = useState(false);
  const colorScheme = useColorScheme();
  const ink = { color: colorScheme === 'dark' ? '#FFFFFF' : '#000000' };

  return (
    <>
      <Host matchContents>
        <Button label="Open" onPress={() => setIsPresented(true)} />
      </Host>
      <BottomSheet
        isPresented={isPresented}
        onDismiss={() => setIsPresented(false)}
        showDragIndicator={false}>
        <Text textStyle={ink}>No drag handle.</Text>
      </BottomSheet>
    </>
  );
}
```

</ComponentExample>

### Snap points

Pass [`snapPoints`](#snappoints) to let the user drag the sheet between multiple resting heights. You can use the semantic values `'half'` and `'full'` for cross-platform parity. The `{ fraction }` and `{ height }` forms are honored precisely on iOS and web.

When sheet content can be taller than the smallest snap point, wrap it in a `ScrollView` so the overflow scrolls correctly.

<ComponentExample
  title="BottomSheetSnapPointsExample.tsx"
  android={{
    src: '/static/images/expo-ui/examples/universal-bottomsheet-snap-points-android-light.webp',
    darkSrc: '/static/images/expo-ui/examples/universal-bottomsheet-snap-points-android-dark.webp',
    alt: 'A half-height sheet titled Half / full sheet',
  }}
  ios={{
    src: '/static/images/expo-ui/examples/universal-bottomsheet-snap-points-ios-light.webp',
    darkSrc: '/static/images/expo-ui/examples/universal-bottomsheet-snap-points-ios-dark.webp',
    alt: 'A half-height sheet titled Half / full sheet',
  }}>

```tsx
import { useState } from 'react';
import { useColorScheme } from 'react-native';
import { Host, BottomSheet, Button, Column, ScrollView, Text } from '@expo/ui';

export default function BottomSheetSnapPointsExample() {
  const [isPresented, setIsPresented] = useState(false);
  const colorScheme = useColorScheme();
  const ink = { color: colorScheme === 'dark' ? '#FFFFFF' : '#000000' };

  return (
    <>
      <Host matchContents>
        <Button label="Open" onPress={() => setIsPresented(true)} />
      </Host>
      <BottomSheet
        isPresented={isPresented}
        onDismiss={() => setIsPresented(false)}
        snapPoints={['half', 'full']}>
        <ScrollView>
          <Column spacing={12}>
            <Text textStyle={{ ...ink, fontSize: 20, fontWeight: '700' }}>Half / full sheet</Text>
            <Text textStyle={ink}>Drag the sheet between half and full screen height.</Text>
          </Column>
        </ScrollView>
      </BottomSheet>
    </>
  );
}
```

</ComponentExample>

> On Android, `{ fraction }` and `{ height }` snap to the nearest of `'half'` / `'full'` — the underlying `ModalBottomSheet` only supports two resting states. The partial state is only visible when content is tall enough to exceed Material's partial threshold; give the content an explicit height or fill the available space if you need the half state on short content.

## API

```tsx
import { BottomSheet } from '@expo/ui';
```

<APISection packageName="expo-ui/universal/bottomsheet" apiName="BottomSheet" />

</PlatformTabsGroup>
